deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platowner
spec:
  type: ClusterIP
  selector:
    app: platowner
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
